--- a/02-counter-app/package.json
+++ b/02-counter-app/package.json
@@ -12,17 +12,23 @@
   "dependencies": {
     "@babel/core": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
+    "@babel/runtime": "^7.20.7",
     "babel-jest": "^29.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.5",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^29.3.1",
-    "vite": "^4.0.0"
+    "jest-environment-jsdom": "^29.3.1",
+    "vite": "^4.0.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
